--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,17 @@
+/* https://colorhunt.co/palette/6096b493bfcfbdcdd6eee9da */
 body {
-  background-color: #E27D60;
+  background-color: #EEE9DA;
 }
 
 hr {
-  border-color: white;
+  border-color: #93BFCF;
   border-style: dotted none none;
   border-width: 4px;
   width: 25%;
+}
+
+h1 {
+  color: #6096B4;
 }
 
 img {
